@@ -1,3 +1,8 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* mux.c (get_dirents): Use munmap instead of vm_deallocate.
+	(netfs_get_dirents): Likewise.
+
 1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* node.c (netfs_attempt_utimes): Fix typo in last change.
